<resources xmlns:tools="http://schemas.android.com/tools">
    <string-array name="tipo_productos">
        <item>frutas</item>
        <item>verduras</item>
        <item>otros</item>
    </string-array>
    <string name="botom1">Tienda</string>
    <string name="botom2">Carrito</string>
    <string name="botom3">Registro</string>
    <string name="botom4">Mas…</string>
    <string name="fragment_title_shop">tienda</string>
    <string name="seekbar_tam0" tools:keep="@string/seekbar_tam0">Tamaño: pequeño</string>
    <string name="seekbar_tam1">Tamaño: mediano</string>
    <string name="seekbar_tam2" tools:keep="@string/seekbar_tam2">Tamaño: grande</string>
    <string name="seekbar_mad0" tools:keep="@string/seekbar_mad0">Maduracion: verede</string>
    <string name="seekbar_mad1">Maduracion: normal</string>
    <string name="seekbar_mad2" tools:keep="@string/seekbar_mad2">Maduracion: muy maduro</string>
    <string name="tag_fruver" tools:keep="@string/tag_fruver">frutas</string>
    <string name="tag_food">verduras</string>
    <string name="tag_medicinal">otros</string>
    <string name="tag_tab1">Fruver</string>
    <string name="tag_tab2">Comida</string>
    <string name="tag_tab3">otros</string>
    <string name="estado_entregado">Entregado</string>
    <string name="estado_espera">En espera</string>
    <string name="titulo_actualice">Actualice</string>
    <string name="app_name">caria</string>
    <string name="navigation_drawer_open" tools:keep="@string/navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close" tools:keep="@string/navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title" tools:keep="@string/nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle" tools:keep="@string/nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc" tools:keep="@string/nav_header_desc">Navigation header</string>
    <string name="action_settings" tools:keep="@string/action_settings">Settings</string>
    <string name="menu_home" tools:keep="@string/menu_home">Home</string>
    <string name="menu_gallery" tools:keep="@string/menu_gallery">Gallery</string>
    <string name="menu_slideshow" tools:keep="@string/menu_slideshow">Slideshow</string>
    <string name="menu_tools" tools:keep="@string/menu_tools">Tools</string>
    <string name="menu_share" tools:keep="@string/menu_share">Share</string>
    <string name="menu_send" tools:keep="@string/menu_send">Send</string>
    <string name="hint_numero" tools:keep="@string/hint_numero">Numero de celular...</string>
    <string name="hint_otro_numero" tools:keep="@string/hint_otro_numero">(opcional) Otro numero.</string>
    <string name="hint_direccion" tools:keep="@string/hint_direccion">Tu direccion</string>
    <string name="hint_nombre">Tu nombre y apellidos...</string>
    <string name="bt_finalzar" tools:keep="@string/bt_finalzar">Finalizar</string>
    <string name="bt_atras" tools:keep="@string/bt_atras">Atras</string>
    <string name="error_not_fill">Debes llenar este campo</string>
    <string name="error_digit">El numero de digitos no es correcto</string>
    <string name="sub_title_location" tools:keep="@string/sub_title_location">Ubicación</string>
    <string name="toast_error_cantidad_digitos" tools:keep="@string/toast_error_cantidad_digitos">El número ingresado debe tener 7 o 10 dígitos.</string>
    <string name="toast_error_conexion">Oops, debes tener conexión a internet para que el pedido sea enviado exitosamente.</string>
    <string name="toast_error_registro_incompleto" tools:keep="@string/toast_error_registro_incompleto">Recuerda que debes completar todos los campos para continuar.</string>
    <string name="toast_error_numero_invalido" tools:keep="@string/toast_error_numero_invalido">Debes ingresar un numero valido, ya sea fijo o celular.</string>
    <string name="toast_producto_no_disponible" tools:keep="@string/toast_producto_no_disponible">Este producto se encuentra agotado por ahora ¡lo traeremos para ti lo antes posible!</string>
    <string name="toast_producto_agregado_correctamente" tools:keep="@string/toast_producto_agregado_correctamente">¡Ahora este producto se encuentra en tu carrito de compras!</string>
    <string name="toast_error_agregado_previamente">Ya seleccionaste con anterioridad éste producto, puedes modificarlo ingresando a él desde el carrito de compras.</string>
    <string name="toast_cargado_en_carrito">Tu pedido ha sido cargado exitosamente en el carrito.</string>
    <string name="toast_error_pedido_elimniado" tools:keep="@string/toast_error_pedido_elimniado">Lo sentimos, solo podremos cancelar tu pedido si está en cola, no dudes en contactarnos para consultar las inquietudes que tengas.</string>
    <string name="toast_pedido_enviado_exitosamente">¡El pedido ha sido enviado exitosamente!</string>
    <string name="toast_error_epoca_envio_1" tools:keep="@string/toast_error_epoca_envio_1">Tu pedido se encuentra en trámite, si deseas modificarlo, contáctanos.</string>
    <string name="toast_error_epoca_envio_2" tools:keep="@string/toast_error_epoca_envio_2">En estos momentos nos encontramos en entregas, debes esperar hasta el lunes que abramos nuevamente la recepción de pedidos.</string>
    <string name="toast_carrito_vaciado">Listo, Tu carrito ahora se encuentra vacío.</string>
    <string name="toast_correccion_exitosa">Hemos realizado tu corrección con exito.</string>
    <string name="toast_producto_eliminado" tools:keep="@string/toast_producto_eliminado">Hecho, este producto se encuentra fuera de tu carrito de compras.</string>
    <string name="toast_cantidad_positiva">¡Asegúrate de llevar el producto! Para ello la cantidad del mismo debe ser mayor a cero.</string>
    <string name="toast_error_solo_numeros" tools:keep="@string/toast_error_solo_numeros">No olvides que Tu nombre y apellidos deben contener solo letras.</string>
    <string name="toast_error_tope" tools:keep="@string/toast_error_tope">Recuerda que el valor del pedido debe ser mayor a 25.000 COP.</string>
    <string name="toast_error_login" tools:keep="@string/toast_error_login">algo va mal, no hemos podido completar tu registro. Intenta mas tarde.</string>
    <string name="toast_producto_no_encontrado" tools:keep="@string/toast_producto_no_encontrado">Lo sentimos, no hemos encontrado lo que estás buscando.</string>
    <string name="activity_fruta_seleccionada_est_unidad_representacion" tools:keep="@string/activity_fruta_seleccionada_est_unidad_representacion">Una unidad equivale a:</string>
    <string name="activity_fruta_seleccionada_est_unidad" tools:keep="@string/activity_fruta_seleccionada_est_unidad">Total unidad: </string>
    <string name="activity_fruta_seleccionada_est_cantidad" tools:keep="@string/activity_fruta_seleccionada_est_cantidad">Unidades: </string>
    <string name="activity_fruta_seleccionada_est_beneficios">Algunos datos de este alimento.</string>
    <string name="activity_fruta_seleccionada_est_descripcion" tools:keep="@string/activity_fruta_seleccionada_est_descripcion">Descripción</string>
    <string name="ventana_aclaraciones_est_servicio">Sobre el servicio:</string>
    <string name="ventana_aclaraciones_res_servicio">En nuestro equipo de trabajo contamos con personal certificado en el trato de alimentos; así que puedes estar tranquilo, te garantizaremos una buena higiene y trato de los productos.</string>
    <string name="ventana_aclaraciones_est_unidad">Sobre la unidad:</string>
    <string name="ventana_aclaraciones_est_precio">Sobre el precio:</string>
    <string name="ventana_aclaraciones_est_comentario">Sobre los comentarios:</string>
    <string name="ventana_aclaraciones_res_comentario">Hagamos esto personal; para ello pondremos disponible un cuadro de comentario para cada producto, en donde puedes escribirnos tus gustos y preferencias respecto a cada alimento.</string>
    <string name="ventana_aclaraciones_est_entrega">Sobre la entrega:</string>
    <string name="ventana_aclaraciones_res_precio">Adicionaremos a tu compra un valor de $3200 COP; esto para cubrir costos de transporte.</string>
    <string name="ventana_aclaraciones_res_unidad">Las unidades hacen referencia a características tales como el peso o la cantidad del producto que se está vendiendo; estas varían según cada uno y pueden ser encontradas cuando seleccionas un elemento desde la pestaña "tienda".</string>
    <string name="ventana_aclaraciones_res_entrega">La entrega de tu pedido la realizaremos los martes y sábados, y entregaremos lo último que hayas enviado hasta un día antes de cualquiera de cualquiera de los dos días de entrega a las 12 P.M.; así puedes modificar y reenviar tu pedido cuantas veces gustes.</string>
    <string name="ventana_agredecimientos_res_stack">Sin su ayuda nada de esto habría sido posible. Ustedes son la prueba viva de que el conocimiento debe ser libre y de fácil acceso. Muchas gracias a toda la comunidad.</string>
    <string name="ventana_agradecimientos_res_flaticon">En algunas ocasiones, los programadores no somos muy dúctiles en temas de estética; Así pues, Flaticon representó una ayuda invaluable en temas de esta índole. Muchas gracias a colaboradores como Smashicons, Prettycons y DinosoftLabs.</string>
    <string name="ventan_agradecimientos_res_freepik">Los hermosos diseños de frutas y verduras fueron tomados de Freepik, Un usuario registrado en Flaticon. Damos toda nuestra gratitud al autor</string>
    <string name="ventan_agradecimientos_est_stackoverflow">Stackoverflow</string>
    <string name="ventan_agradecimientos_est_flaticon">Flaticon</string>
    <string name="ventan_agradecimientos_est_freepick">Frepick</string>
    <string name="ventana_contacto_res_cel_2">321 687 2056</string>
    <string name="ventana_contacto_res_fijo">451 53 99</string>
    <string name="ventana_contacto_est_fijo">fijo:</string>
    <string name="ventana_contacto_res_correo">arreborverde@gmail.com</string>
    <string name="ventana_contacto_res_facebook">Arrebor verde</string>
    <string name="ventana_contacto_est_instagram">Instagram:</string>
    <string name="ventana_cotacto_res_lugares">Envigado, Bello, Itaguí y Medellín.</string>
    <string name="ventana_contacto_est_lugares">Lugares</string>
    <string name="ventana_contacto_est_celowat">Cel/Whatsapp: </string>
    <string name="ventana_nosotros_est_facebook">Facebook: </string>
    <string name="ventana_nosotros_est_correo">Correo:</string>
    <string name="ventana_contacto_res_contact">Contacto</string>
    <string name="ventana_nosotros_est_redes">Redes</string>
    <string name="ventana_nosotros_est_quienes">¿Quiénes somos?</string>
    <string name="ventana_nosotros_est_mision">Nuestra Visión</string>
    <string name="ventana_nosotros_est_lema">Lema</string>
    <string name="ventana_nosotros_res_quienes">Somos un grupo de personas unidas bajo el propósito de dar una agradable experiencia de mercado. Desde el domicilio, hasta la elección de los productos, prometemos dar lo mejor de nosotros para corresponder así la confianza que nuestros clientes depositan en nosotros.</string>
    <string name="ventana_nosotros_res_mision">Creamos la oportunidad de que obtengas los productos más frescos con mayor facilidad, solo tocando la pantalla de tu móvil accederás a una gran variedad de alimentos cuidadosamente seleccionados, tus comidas nunca volverán a ser las mismas.</string>
    <string name="ventana_nosotros_res_lema">"Llenemos el mundo de música, amor y orgullo".</string>
    <string name="titulo_registro" tools:keep="@string/titulo_registro">Registro</string>
    <string name="title_fsettings">Informacion</string>
    <string name="title_fbasquekt">Carrito</string>
    <string name="title_fshoop">Tienda</string>
    <string name="title_fregister">Registro</string>
    <string name="From">From</string>
    <string name="EHIgroup">EHIgroup</string>
</resources>