<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    tools:keep="@menu/bottom_nav_menu">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_fsettings" />

    <item
        android:id="@+id/navigation_bascket"
        android:icon="@drawable/ic_dashboard_black_24dp"
        android:title="@string/title_fregister" />

    <item
        android:id="@+id/navigation_notifications"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/title_fshoop" />

    <item
        android:id="@+id/navigation_others"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/title_fbasquekt" />



</menu>
