<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SplashActivity">

    <TextView
        android:layout_width="409dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="240dp"
        android:fontFamily="@font/comfortaa_bold"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textColor="@color/color_purple"
        android:textSize="40sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView61"
        android:layout_width="409dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="38dp"
        android:fontFamily="@font/nunito_light"
        android:text="@string/From"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="10sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:layout_width="409dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/nunito"
        android:text="@string/EHIgroup"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView61" />
</androidx.constraintlayout.widget.ConstraintLayout>